<resources>
    <string name="app_name">CGPA Calculator</string>

    <string name="hello_world">This is a test that it works!</string>
    <string name="about">About</string>
    <string name="profile_name">FirstName, LastName</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_pic_desc">Profile Picture</string>
    <string name="edit_button_desc">Edit Button</string>
    <string name="save_button_desc">Save Button</string>
    <string name="check_gpa">Go</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="result">0</string>
    <string name="courses">Courses</string>
    <string name="grade">Grades</string>
    <string name="unit">Units</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="course6">Course 6</string>
    <string name="course7">Course 7</string>
    <string name="course8">Course 8</string>
    <string name="course9">Course 9</string>
    <string name="course10">Course 10</string>
    <string name="course11">Course 11</string>
    <string name="course12">Course 12</string>
    <string name="course13">Course 13</string>
    <string name="course14">Course 14</string>
    <string name="course15">Course 15</string>
    <string name="course16">Course 16</string>
    <string name="course17">Course 17</string>
    <string name="course18">Course 18</string>
    <string name="course19">Course 19</string>
    <string name="course20">Course 20</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="saved_gps">Saved Grade Points</string>
    <string name="calc_gpa">Calculate GPA</string>
    <string name="calc_cgpa">Calculate CGPA</string>
    <string name="gpa">GPA</string>
    <string name="second_semester">2nd Semester Grade</string>
    <string name="first_semester">1st Semester Grade</string>
    <string name="level_100">100 Level</string>
    <string name="level_200">200 Level</string>
    <string name="level_300">300 Level</string>
    <string name="level_400">400 Level</string>
    <string name="level_500">500 Level</string>
    <string name="level_600">600 Level</string>
    <string name="level_700">700 Level</string>
    <string name="name">Victor I Afolabi</string>
    <string name="career"><![CDATA[Computer Programmer & AI Research Scientist]]></string>
    <string name="career_status">CFO Autovations\nCEO mynds Inc.</string>
    <string name="phone_no">+2348141205245</string>
    <string name="email_addr">javafolabi@gmail.com</string>
    <string name="contact_info">Contact Information</string>
    <string name="fav_quote_title">Favorite Quote</string>
    <string name="fav_quote_body">"The heights great men attain and retain is not achieved by sudden flight."</string>
    <string name="empty_gpaText">Oops, no GPA has been saved.</string>
    <string name="empty_cgpaText">Oops, no CGPA has been saved.</string>

</resources>
