<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <include layout="@layout/app_bar" android:id="@+id/app_bar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_below="@id/app_bar">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">

            <!-- RESULT -->
            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/result"
                    android:id="@+id/tvResult" android:gravity="right"
                    android:textSize="45sp" android:padding="15dp"
                    android:layout_marginRight="20dp" android:layout_marginLeft="20dp"
            />

            <!-- PROMPT TEXT -->
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/tvPrompt" android:layout_marginRight="20dp"
                      android:layout_marginLeft="20dp"/>

            <!--BUTTON CONTAINER -->
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical" android:padding="20dp" android:layout_below="@id/tvResult"
                          android:id="@+id/llContainer">

                <!-- BUTTON 1-3 -->
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/ll1to3" android:orientation="horizontal"
                              android:weightSum="90">

                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/one" android:id="@+id/b1" android:layout_gravity="left"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/two" android:id="@+id/b2" android:layout_gravity="center_horizontal"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/three" android:id="@+id/b3" android:layout_gravity="right"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                </LinearLayout>

                <!-- BUTTON 4-6 -->
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/ll4to6" android:orientation="horizontal"
                              android:weightSum="90">

                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/four" android:id="@+id/b4" android:layout_gravity="left"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/five" android:id="@+id/b5" android:layout_gravity="center_horizontal"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/six" android:id="@+id/b6" android:layout_gravity="right"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                </LinearLayout>

                <!-- BUTTON 7-9 -->
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/ll7to9" android:orientation="horizontal"
                              android:weightSum="90">

                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/seven" android:id="@+id/b7" android:layout_gravity="left"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/eight" android:id="@+id/b8" android:layout_gravity="center_horizontal"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/nine" android:id="@+id/b9" android:layout_gravity="right"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                </LinearLayout>

                <!-- SUBMIT BUTTON -->
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:id="@+id/llLastRow" android:orientation="horizontal"
                              android:weightSum="90">

                    <ImageButton android:layout_width="90dp" android:layout_height="@dimen/button_size"
                                 android:clickable="false" android:layout_margin="10dp"
                                 android:src="@android:drawable/ic_input_delete"
                                 android:contentDescription="Back Button" android:id="@+id/ibBack"
                                 android:layout_weight="30"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/result" android:id="@+id/b0"
                            android:layout_weight="30" android:layout_margin="10dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <Button android:layout_width="wrap_content" android:layout_height="@dimen/button_size"
                            android:text="@string/check_gpa" android:id="@+id/bSubmit"
                            android:layout_margin="10dp" android:layout_weight="30"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                </LinearLayout>

            </LinearLayout> <!-- END OF BUTTON CONTAINER -->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
